# presentations

./: Dockerfile  README.md  costs.md  docker-compose.yml  pyproject.toml  ruff.toml
A_Survey_of_Task_Planning/: 01_Leveraging_Intrinsic_Reasoning_Abilities.md
A_Survey_of_Task_Planning/01/: 01_Leveraging_Intrinsic_Reasoning_Abilities.md
A_Survey_of_Task_Planning/01/appendix/: CoT2.md
A_Survey_of_Task_Planning/02/: 02_Integration_with_External_Methods copy.md  02_Integration_with_External_Methods.md
A_Survey_of_Task_Planning/appendix/: CoT.md  tree_based_search.md
Algorithmic/: index.md
Algorithmic/samples/: bubunnwa.py  dfs.py  utils.py
Ideas/: kikaku.md
Reports/A_Survey_of_Task_Planning/: README.md
Reports/A_Survey_of_Task_Planning/appendix/: self_improvement.md
Works/CoAI/: 20260113_first_mtg.md  architectuer.drawio
develop/: README.md
develop/FY26_01_kikaku/: index.md
develop/documents/dialogue_system/: 00_index.md  01_context_scope.md  02_goals_quality_constraints.md  03_building_blocks.md  06_state_spec.md  test.md
develop/documents/samples/: 01_context_scope.md  04_runtime_scenarios.md  05_cross_cutting.md  07_node_contracts_rw_matrix.md
develop/documents/task_oriented_dialogue_system/: 00_INDEX.md  01_CONTEXT_AND_SCOPE.md  02_REQUIREMENTS.md  03_ARCHITECTURE_OVERVIEW.md  04_STATE_MODEL.md  05_WORKFLOW_DM.md  07_ERROR_HANDLING_AND_MODES.md  08_PROMPTS_AND_TEMPLATES.md  09_TOOLS_AND_INTEGRATIONS.md  10_DATA_AND_KB.md  11_EVALUATION_AND_METRICS.md  12_LLMOPS_AND_RELEASE.md  13_SECURITY_AND_GUARDRAILS.md  14_OBSERVABILITY.md  (+4 more)
src/: main.py
(+26 files in other folders)
